# flask_gb_prod

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
blog/: admin.py  app.py  blog.db  blog1.db  configs.py
blog/api/: __init__.py  article.py  author.py
blog/forms/: user.py
blog/models/: article.py  article_tag.py  tag.py  user.py
blog/permissions/: article.py  user.py
blog/schemas/: article.py
blog/templates/: base.html  index.html
blog/templates/admin/: index.html
blog/templates/articles/: apilist.html  create.html  details.html  list.html
blog/templates/auth/: login.html  register.html
blog/templates/authors/: details.html  list.html
blog/templates/tags/: details.html  list.html
blog/templates/users/: details.html  list.html
blog/views/: articles.py  auth.py  authors.py  tags.py  users.py
migrations/versions/: 11672e4b0677_create_2_user_model.py  241975409274_.py  3163bd6ae32a_create_user_password.py  9cfc34b9ebd7_.py  a63b63ce13b7_create_user_model.py  e5664ca3db85_create_user_first_name_and_last_name.py  fdc350b913df_.py
